welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:19: error: too many arguments for method fleur: (c1: java.awt.Color)Unit
		fleur(Color.RED,Color.YELLOW)
                     ^