welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c1:Color) {
	setCouleurBrosse(c1)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	setCouleurBrosse(Color.YELLOW)
	baisseBrosse()
	leveBrosse()
	avance()
	droite()
	droite()
}


def growFlowers() {
	for(c1 <- 1 to 4) {
		fleur(Color.RED,Color.YELLOW)
	}
	
	
}

